<resources>
    <string name="app_name">MyRealtimeDatabase</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="user_id">User ID</string>
    <string name="add_entry">Add Entry</string>
    <string name="users">Users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    />
</resources>