<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEntryFragment">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="207dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="81dp"
        android:ems="10"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/addBtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewName1"
        android:layout_width="119dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/name"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewID1" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="207dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewID1"
        android:layout_width="119dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="285dp"
        android:text="@string/user_id"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEmail1"
        android:layout_width="119dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:layout_marginBottom="297dp"
        android:text="@string/email"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName1" />

    <EditText
        android:id="@+id/editTextID"
        android:layout_width="207dp"
        android:layout_height="51dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewID1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="168dp"
        android:text="@string/add_entry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>