<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="412dp"
        android:layout_height="355dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.075" />



    <TextView
        android:id="@+id/textView5"
        android:layout_width="105dp"
        android:layout_height="35dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="153dp"
        android:text="@string/users"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="409dp"
        android:layout_height="300dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView2">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="207dp"
            android:layout_height="51dp"
            android:layout_marginStart="185dp"
            android:layout_marginTop="115dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/addBtn"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textViewName1"
            android:layout_width="119dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="16dp"
            android:text="@string/name"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewID1" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="207dp"
            android:layout_height="51dp"
            android:layout_marginStart="185dp"
            android:layout_marginTop="65dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/textViewID1"
            android:layout_width="119dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:text="@string/user_id"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewEmail1"
            android:layout_width="119dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="135dp"
            android:text="@string/email"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewName1" />

        <EditText
            android:id="@+id/editTextID"
            android:layout_width="207dp"
            android:layout_height="51dp"
            android:layout_marginStart="185dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="text" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="151dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="151dp"
            android:text="@string/add_entry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>